bar chart . allow specifying time grouping from the chart control panel . fix fill color in bar plot and scatter . switch to more explicit attrTween for bar transitions . d3 initialize transition after enter in barplot. fixes missing bars on some zoom outs . clamp negative bar heights (which can occur when resizing the chart) . add a little extra padding to the chart when the chart contains a bar plot   (so a wide bar won't be cut off on the left edge)
misc
. set resize cursor, thanks Milo for the tip
. fix bug with scale variable collision when switching to scatter cahrt

--- a/css/graph.css
+++ b/css/graph.css
@@ -105,11 +105,12 @@ text.title {
 .resize-widget {
   fill-opacity: .65;
   fill: grey;
+  cursor: nwse-resize;
 }
 
 .series path.mark,
 .series circle.mark {
-  fill-opacity: 0;
+/*  fill-opacity: 0; */
   stroke-width: 2.5;
 }
 
@@ -117,10 +118,6 @@ text.title {
   font: 14px;
   font-style: italic;
   text-anchor: middle;
-}
-
-.chart .series .bar {
-  fill-opacity: .3;
 }
 
 treecontrol .column-name {
